section article fix; section apartments fix; page object opened fix;

--- a/app/gallery-opened.html
+++ b/app/gallery-opened.html
@@ -241,13 +241,16 @@
           </table>
         </div>
         <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
-        <div class="object-modal__btn"><a class="arrow-btn arrow-btn--left" href="#">
+        <div class="object-modal__btn">
+          <div class="arrow-btn arrow-btn--left">
             <div class="arrow-btn__icon">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
               </svg>
             </div>
-            <p class="arrow-btn__text">Подробнее</p></a></div>
+            <p class="arrow-btn__text">Подробнее</p>
+          </div>
+        </div>
         <div class="object-modal__close">
           <div class="close"></div>
           <p>Закрыть</p>
@@ -370,9 +373,9 @@
 <!--build:js js/main.min.js -->
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/jquery-ui.js"></script>
-    <script src="js/libs/lightgallery.js"></script>
-    <script src="js/libs/aos.js"></script>
+    <script src="js/libs/lightgallery-all.min.js"></script>
     <script src="js/libs/slick.min.js"></script>
+    <script src="js/libs/aos.js"></script>
     <script src="js/main.js"></script><!--endbuild-->
   </body>
 </html>
