--- a/app/object-opened.html
+++ b/app/object-opened.html
@@ -8,6 +8,7 @@
     <title>Объекты</title>
     <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/libs/aos.css"/>
+    <link rel="stylesheet" href="css/libs/lightgallery.css"/>
     <link rel="stylesheet" href="css/libs/slick.css"/>
     <link rel="stylesheet" href="css/libs/slick-theme.css"/>
     <link rel="stylesheet" href="css/global.min.css"/><!--endbuild-->
@@ -311,6 +312,14 @@
       </div>
     </section>
     <section class="galery-section">
+      <!--SLIDER BUTTON START-->
+      <svg class="slider-icon slider-icon__prev">
+        <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
+      </svg>
+      <svg class="slider-icon slider-icon__next">
+        <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+      </svg>
+      <!--SLIDER BUTTON END -->
       <div class="container">
         <div class="content-galery grid">
           <div class="content-headline">
@@ -490,13 +499,16 @@
           </table>
         </div>
         <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
-        <div class="object-modal__btn"><a class="arrow-btn arrow-btn--left" href="#">
+        <div class="object-modal__btn">
+          <div class="arrow-btn arrow-btn--left">
             <div class="arrow-btn__icon">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
               </svg>
             </div>
-            <p class="arrow-btn__text">Подробнее</p></a></div>
+            <p class="arrow-btn__text">Подробнее</p>
+          </div>
+        </div>
         <div class="object-modal__close">
           <div class="close"></div>
           <p>Закрыть</p>
@@ -619,9 +631,9 @@
 <!--build:js js/main.min.js -->
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/jquery-ui.js"></script>
-    <script src="js/libs/lightgallery.js"></script>
-    <script src="js/libs/aos.js"></script>
+    <script src="js/libs/lightgallery-all.min.js"></script>
     <script src="js/libs/slick.min.js"></script>
+    <script src="js/libs/aos.js"></script>
     <script src="js/main.js"></script><!--endbuild-->
   </body>
 </html>
