--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,17 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body>
+    <!--PRELOADER START-->
+    <div class="preloader">
+      <div class="wrap">
+        <div class="icon">
+          <svg class="logo">
+            <use xlink:href="images/main-page_icons-sprite.svg#preloder_logo"></use>
+          </svg><span class="logo__top"></span><span class="logo__bottom"></span>
+        </div>
+      </div>
+    </div>
+    <!--PRELOADER END-->
     <!--POPUP START-->
     <div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom">
       <div class="info-block info-left"><a class="info-text" href="tel:+380506347178">+38(050) 634 71 78</a>
@@ -105,8 +116,8 @@
             <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
           </svg></a>
         <!--MOBILE LOGO END-->
-        <h1 class="header-content__title" data-aos="fade-left">Современное <br> жилье в Полтаве и <br> Миргороде</h1>
-        <p class="header-content__text" data-aos="fade-right">Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода</p><a class="arrow-btn" href="#about">
+        <h1 class="header-content__title" data-aos="fade-left" data-aos-delay="1750" data-aos-duration="1500">Современное <br> жилье в Полтаве и <br> Миргороде</h1>
+        <p class="header-content__text" data-aos="fade-right" data-aos-delay="1750" data-aos-duration="1500">Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода</p><a class="arrow-btn" href="#about">
           <div class="arrow-btn__icon">
             <svg class="icon">
               <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
