--- a/app/arcticle.html
+++ b/app/arcticle.html
@@ -122,7 +122,7 @@
       <div class="container">
         <div class="information">
           <h3 class="date">01.04.2020 г.</h3>
-          <h1 class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</h1><img class="img float-right" src="images/article/article-image1.jpg" alt="ЖК 'На Сенной'"/>
+          <h1 class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</h1>
           <h2 class="text__headlide">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</h2>
           <table class="price">
             <tr>
@@ -160,7 +160,7 @@
               <td>9-9+</td>
               <td>10000,00 грн</td>
             </tr>
-          </table>
+          </table><img class="img float-right" src="images/article/article-image1.jpg" alt="ЖК 'На Сенной'"/>
           <p>Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. </p>
           <p>Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.</p>
           <p>Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    </p><img class="img float-left img" src="images/article/article-image2.jpg" alt="ЖК 'На Сенной'"/>
