--- a/app/404.html
+++ b/app/404.html
@@ -5,12 +5,17 @@
     <meta name="description" content="Starter"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Angro</title>
-    <link rel="stylesheet" href="css/styles.min.css">
+    <title>Квартиры</title>
+    <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
+    <link rel="stylesheet" href="css/libs/aos.css"/>
+    <link rel="stylesheet" href="css/libs/slick.css"/>
+    <link rel="stylesheet" href="css/libs/slick-theme.css"/>
+    <link rel="stylesheet" href="css/libs/lightgallery.css"/>
+    <link rel="stylesheet" href="css/global.min.css"/><!--endbuild-->
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
-  <body class="arcticle-body">
+  <body class="apartments-body">
     <!--INFO START -->
     <div class="object-info">
       <div class="object-info__icon">
@@ -93,7 +98,7 @@
     </div>
     <!--SIDEBAR END-->
     <!--HEADER START -->
-    <header class="article-header">
+    <header class="apartments-header">
       <div class="container">
         <div class="grid">
           <!--MOBILE LOGO--><a class="mobile-logo" href="#">             
@@ -101,82 +106,19 @@
               <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
             </svg></a>
           <!--MOBILE LOGO END-->
-          <h2 class="title">Статья</h2>
-          <!--h3.headline Важная информация со статьями и новостями от angro--><a class="arrow-btn arrow-btn--left" href="blog.html">
-            <div class="arrow-btn__icon">
-              <svg class="icon">
-                <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-              </svg>
-            </div>
-            <p class="arrow-btn__text">Блог</p></a>
+          <h2 class="title">Страница не найдена</h2>
+          <h3 class="headline">неправильно набран адрес или такой страницы не существует</h3>
         </div>
       </div>
     </header>
     <!--HEADER END-->
-    <!--CONTENT START-->
-    <section class="article-content">
-      <div class="container">
-        <div class="information">
-          <h3 class="date">01.04.2020 г.</h3>
-          <h1 class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</h1>
-          <h2 class="text__headlide">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</h2>
-          <table class="price">
-            <tr>
-              <th>Вид квартиры</th>
-              <th>Этаж </th>
-              <th>Стоимость 1 кв.м</th>
-            </tr>
-            <tr>
-              <td>Однокомнатная</td>
-              <td>2,7,8</td>
-              <td>11500,00 грн</td>
-            </tr>
-            <tr>
-              <td>Двухкомнатная</td>
-              <td>2,7,8</td>
-              <td>11500,00 грн</td>
-            </tr>
-            <tr>
-              <td>Однокомнатная</td>
-              <td>3-6</td>
-              <td>12000,00 грн</td>
-            </tr>
-            <tr>
-              <td>Двухкомнатная</td>
-              <td>3-6</td>
-              <td>12000,00 грн</td>
-            </tr>
-            <tr>
-              <td>Трехкомнатная</td>
-              <td>9-9+</td>
-              <td>10000,00 грн</td>
-            </tr>
-            <tr>
-              <td>Четырехкомнатная</td>
-              <td>9-9+</td>
-              <td>10000,00 грн</td>
-            </tr>
-          </table><img class="img float-right" src="images/article/article-image1.jpg" alt="ЖК 'На Сенной'"/>
-          <p>Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. </p>
-          <p>Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.</p>
-          <p>Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    </p><img class="img float-left img" src="images/article/article-image2.jpg" alt="ЖК 'На Сенной'"/>
-          <p>Для оценки фактической ситуации с почвой на месте планируемого строительства в апреле 2017 года были проведены инженерно-геологические изыскания Полтавским филиалом Украинского государственного главного научно-исследовательского и производственного института инженерно-технических и экологических изысканий (ПФ ДП «УКРНДІІНТВ») с бурением и изъятием образцов. По результатам были определены геологические условия на строительном участке.</p>
-          <ol>
-            <li>Данные исследования стали основой для проекта фундаментов разработанного главным архитектором проекта Зайцем С.П., который соответствует всем строительным нормам и стандартам.</li>
-            <li>Строительство фундамента было поручено компании «Фундаментспецбуд» основанной в 1990 году. Начиная с этого времени</li>
-          </ol>
-          <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p><img class="img float-right img" src="images/article/article-image3.jpg" alt="ЖК 'На Сенной'"/>
-          <ul>
-            <li>Сначала <a href="#" >«Фундаментспецбуд»</a> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.</li>
-            <li>Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <a href="#" >«Фундаментспецбуд»</a> выполнил более 1000 проектов на территории Украины и за ее пределами.</li>
-          </ul>
-          <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
-          <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  </p>
-          <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
-          <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p>
-        </div>
-      </div>
-    </section>
+    <!--CONTENT START--><section class="error-page">
+<div class="container container--error">
+<h1 class="error-page__title">404</h1>
+<h4 class="error-page__subtitle">Упс...Похоже что вы потерялись.</h4>
+<a class="btn" href="/">Вернуться на главную</a>
+</div>
+</section>
     <!--CONTENT END-->
     <!--FOOTER START-->
     <footer class="footer">
@@ -423,6 +365,16 @@
       </div>
     </div>
     <!--policy END--><!-- modal end-->                  
-<script src="js/main.min.js"></script>
+<!--build:js js/main.min.js -->
+    <script src="js/libs/jquery.min.js"></script>
+    <script src="js/libs/jquery-ui.js"></script>
+    <script src="js/libs/lightgallery-all.min.js"></script>
+    <script src="js/libs/slick.min.js"></script>
+    <script src="js/libs/aos.js"></script><script type="text/javascript">
+    (function(d, s, u, e, p) {
+        p = d.getElementsByTagName(s)[0], e = d.createElement(s), e.async = 1, e.src = u, p.parentNode.insertBefore(e, p);
+    })(document, 'script', 'https://flatris.com.ua/public/web.js?cid=P3XQb0g7V0zAg1G&hl=ru');
+</script>
+    <script src="js/main.js"></script><!--endbuild-->
   </body>
 </html>
