add HTML buttons for object opened page; styles fix;

--- a/app/index.html
+++ b/app/index.html
@@ -582,12 +582,14 @@
 <span class="wpcf7-form-control-wrap checkbox-672">
 <span class="wpcf7-form-control wpcf7-checkbox contact-form__title" id="check">
 <span class="wpcf7-list-item first last">
-<input type="checkbox" name="checkbox-672[]" value="Я даю согласие на обработку моих персональных данных согласно">
+<input type="checkbox" name="checkbox-672[]" value="Я даю согласие на обработку моих персональных данных согласно" checked="checked">
 <span class="wpcf7-list-item-label">Я даю согласие на обработку моих персональных данных согласно</span>
 </span>
 </span>
-</span> 
+</span>
 <div class="contact-form__link">политике конфиденциальности</div>
+<div class="contact-form__custom-check active__check"></div>
+<div class="contact-form__custom-icon" style="display: block;"></div>
 </div>
 <input type="submit" value="Отправить запрос" class="wpcf7-form-control wpcf7-submit">
 <span class="ajax-loader">
