--- a/app/apartments.html
+++ b/app/apartments.html
@@ -378,7 +378,7 @@
     <script src="js/libs/aos.js"></script><script type="text/javascript">
     (function(d, s, u, e, p) {
         p = d.getElementsByTagName(s)[0], e = d.createElement(s), e.async = 1, e.src = u, p.parentNode.insertBefore(e, p);
-    })(document, 'script', 'https://flatris.com.ua/public/web.js?cid=P3XQb0g7V0zAg1G&hl=ru');
+    })(document, 'script', 'https://flatris.com.ua/public/web.js?cid=P3XQb0g7V0zAg1G&hl=ru'); //-&autostart=1
 </script>
     <script src="js/main.js"></script><!--endbuild-->
   </body>
