--- a/app/gallery.html
+++ b/app/gallery.html
@@ -184,9 +184,12 @@
             </div></a>
         </div>
         <!-- OBJECT END-->
-      </div>
+      </div><div class="container pagination">
+<span aria-current="page" class="page-numbers current">1</span>
+<a class="page-numbers" href="http://1test.website/gallery/page/2/">2</a>
+<a class="next page-numbers" href="http://1test.website/gallery/page/2/">Далее →</a>
+</div>
     </section>
-    <div class="container pagination"><a class="prev page-numbers" href="#">←Ранее</a><a class="page-numbers" href="#">1</a><span class="page-numbers current" aria-current="page">2</span><a class="page-numbers" href="#">3</a><a class="page-numbers" href="#">4</a><span class="page-numbers dots">…</span><a class="page-numbers" href="#">6</a><a class="next page-numbers" href="#">Далее→</a></div>
     <!--CONTENT END-->
     <!--FOOTER START-->
     <footer class="footer">
