styles fix; telegram icon fix;

--- a/app/object.html
+++ b/app/object.html
@@ -345,8 +345,7 @@
               </svg></a></div>
           <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel:+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel:+380509915882">+38(050) 991-58-82</a><a class="footer-link" href="tel:+380509915880">+38(050) 991-58-80</a></div>
           <div class="footer-newsletter">
-            <!--FORM START-->
-            <!--FORM END--><div class="footer-newsletter__form">
+            <!--FORM START--><div class="footer-newsletter__form">
 <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений</h5>
 <div role="form" class="wpcf7" id="wpcf7-f2445-o2" lang="ru-RU" dir="ltr">
 <form action="/#wpcf7-f2445-o2" method="post" class="wpcf7-form invalid" novalidate="novalidate">
@@ -360,7 +359,6 @@
 <label class="footer-newsletter__title"> Ваш e-mail
 <span class="wpcf7-form-control-wrap your-email">
 <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email footer-newsletter__field wpcf7-not-valid" aria-required="true" aria-invalid="true">
-<span role="alert" class="wpcf7-not-valid-tip">Неверно введён электронный адрес.</span>
 </span> 
 </label>
 <input type="submit" value="Хочу быть в курсе!" class="wpcf7-form-control wpcf7-submit btn">
@@ -368,6 +366,7 @@
 </form>
 </div>
 </div>        
+            <!--FORM END-->
           </div><a class="arrow-btn footer-btn" href="#">
             <div class="arrow-btn__icon">
               <svg class="icon">
@@ -383,7 +382,7 @@
             <div class="footer-social__icons"><a class="footer-social__link" href="#">
                 <div class="svg-wrap">
                   <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#facebook icon"></use>
+                    <use xlink:href="images/main-page_icons-sprite.svg#facebook"></use>
                   </svg>
                 </div></a><a class="footer-social__link" href="#">
                 <div class="svg-wrap">
@@ -393,7 +392,7 @@
                 </div></a><a class="footer-social__link" href="#">
                 <div class="svg-wrap">
                   <svg>
-                    <use xlink:href="images/main-page_icons-sprite.svg#insta icon"></use>
+                    <use xlink:href="images/main-page_icons-sprite.svg#insta"></use>
                   </svg>
                 </div></a></div>
           </div>
