--- a/app/index.html
+++ b/app/index.html
@@ -537,7 +537,7 @@
           </div>
           <!--SLIDER TILE-->
           <div class="apartments-tile">
-            <div class="apartments-tile__name">ЖК "На сенной"</div>
+            <div class="apartments-tile__name">ЖК «Дом на Мирного»</div>
             <div class="apartments-tile__img">
               <!--TILE IMG--><img src="images/apartaments/apartaments1.jpg"/>
             </div>
